
= Changelog
:toc: preamble
:project-url: https://github.com/sorairolake/abcrypt
:compare-url: {project-url}/compare
:issue-url: {project-url}/issues
:pull-request-url: {project-url}/pull

All notable changes to this project will be documented in this file.

The format is based on https://keepachangelog.com/[Keep a Changelog], and this
project adheres to https://semver.org/[Semantic Versioning].

== {compare-url}/abcrypt-v0.3.1\...abcrypt-v0.3.2[0.3.2] - 2024-02-17

=== Fixed

* Fix syntax highlighting in `README.md`

== {compare-url}/abcrypt-v0.3.0\...abcrypt-v0.3.1[0.3.1] - 2024-02-17

=== Fixed

* Fix `example.path` in `Cargo.toml` ({pull-request-url}/283[#283])

== {compare-url}/abcrypt-v0.2.10\...abcrypt-v0.3.0[0.3.0] - 2024-02-17

=== Added

* Add ABNF definition of the file format ({pull-request-url}/273[#273])

=== Changed

* Bump MSRV to 1.74.0 ({pull-request-url}/272[#272])
* Rename Argon2 parameters ({pull-request-url}/275[#275])

== {compare-url}/abcrypt-v0.2.9\...abcrypt-v0.2.10[0.2.10] - 2024-01-18

=== Changed

* Change copyright notice in `LICENSES/MIT.txt`

== {compare-url}/abcrypt-v0.2.8\...abcrypt-v0.2.9[0.2.9] - 2024-01-07

=== Changed

* Change to use `bump-my-version`

== {compare-url}/abcrypt-v0.2.7\...abcrypt-v0.2.8[0.2.8] - 2023-12-07

=== Changed

* Supports input from stdin and output to a file in the examples
  ({pull-request-url}/154[#154])

== {compare-url}/abcrypt-v0.2.6\...abcrypt-v0.2.7[0.2.7] - 2023-11-29

=== Changed

* Bump MSRV to 1.70.0 ({pull-request-url}/139[#139])

== {compare-url}/abcrypt-v0.2.5\...abcrypt-v0.2.6[0.2.6] - 2023-11-04

=== Added

* Add serialization support for `Params` ({pull-request-url}/122[#122])

== {compare-url}/abcrypt-v0.2.4\...abcrypt-v0.2.5[0.2.5] - 2023-10-02

=== Changed

* Change link to the format specification ({pull-request-url}/94[#94])

== {compare-url}/abcrypt-v0.2.3\...abcrypt-v0.2.4[0.2.4] - 2023-09-29

=== Removed

* Remove `Params::default` ({pull-request-url}/81[#81])
