@@ -3,7 +3,7 @@
 # SPDX-License-Identifier: Apache-2.0 OR MIT
 
 [tool.bumpversion]
-current_version = "0.3.2"
+current_version = "0.3.3"
 
 [[tool.bumpversion.files]]
 filename = "crates/abcrypt/README.md"
