@@ -4,7 +4,7 @@
 
 [package]
 name = "abcrypt"
-version = "0.3.2"
+version = "0.3.3"
 authors.workspace = true
 edition.workspace = true
 rust-version.workspace = true
