@@ -24,7 +24,7 @@ include = ["/LICENSES", "/README.md", "/src"]
 crate-type = ["staticlib", "cdylib"]
 
 [dependencies]
-abcrypt = { version = "0.3.2", path = "../abcrypt" }
+abcrypt = { version = "0.3.3", path = "../abcrypt" }
 
 [build-dependencies]
 cbindgen = { version = "0.26.0", default-features = false }
