@@ -24,7 +24,7 @@ name = "abcrypt"
 path = "src/main.rs"
 
 [dependencies]
-abcrypt = { version = "0.3.2", path = "../abcrypt", features = ["serde"] }
+abcrypt = { version = "0.3.3", path = "../abcrypt", features = ["serde"] }
 anyhow.workspace = true
 byte-unit = "5.1.4"
 clap = { workspace = true, features = ["wrap_help"] }
@@ -32,7 +32,7 @@ clap_complete = "4.5.1"
 clap_complete_nushell = "4.5.1"
 dialoguer.workspace = true
 serde_json = { version = "1.0.115", optional = true }
-sysexits = "0.7.11"
+sysexits = "0.7.12"
 
 [dev-dependencies]
 assert_cmd = "2.0.14"
