@@ -24,8 +24,8 @@ include = ["/LICENSES", "/README.md", "/src"]
 crate-type = ["cdylib", "rlib"]
 
 [dependencies]
-abcrypt = { version = "0.3.2", path = "../abcrypt" }
-getrandom = { version = "0.2.12", features = ["js"] }
+abcrypt = { version = "0.3.3", path = "../abcrypt" }
+getrandom = { version = "0.2.14", features = ["js"] }
 wasm-bindgen = "0.2.92"
 
 [dev-dependencies]
