@@ -8,7 +8,7 @@
 [source,toml]
 ----
 [dependencies]
-abcrypt = "0.3.2"
+abcrypt = "0.3.3"
 ----
 
 == Crate features
