@@ -14,6 +14,12 @@ All notable changes to this project will be documented in this file.
 The format is based on https://keepachangelog.com/[Keep a Changelog], and this
 project adheres to https://semver.org/[Semantic Versioning].
 
+== {compare-url}/abcrypt-v0.3.2\...abcrypt-v0.3.3[0.3.3] - 2024-04-08
+
+=== Changed
+
+* Update copyright notice ({pull-request-url}/344[#344])
+
 == {compare-url}/abcrypt-v0.3.1\...abcrypt-v0.3.2[0.3.2] - 2024-02-17
 
 === Fixed
